--- a/package.json
+++ b/package.json
@@ -2,10 +2,24 @@
   "name": "state-machine",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {},
+  "typings": "lib/index.d.ts",
+  "main": "lib/index.js",
+  "scripts": {
+    "build": "npm run lint && npm run tsc",
+    "tsc": "tsc",
+    "lint": "tslint -c tslint.json src/**/*.ts",
+    "test": "mocha -r ts-node/register src/**/test.ts",
+    "watch": "tsc -w"
+  },
   "author": "Andrew Start <andrew.start@jibo.com>",
-  "license": "ISC",
-  "dependencies": {
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {
+    "@types/mocha": "^5.0.0",
+    "@types/node": "^8.0.0",
+    "mocha": "^5.0.5",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "~2.8.1"
   }
 }
