--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,21 @@
 {
     "compilerOptions": {
+        "outDir": "lib",
+        "declaration": true,
+        "declarationDir": "lib",
+        "inlineSources": true,
+        "sourceMap": true,
         "target": "es6",
         "allowJs": false,
         "module": "commonjs",
         "moduleResolution": "node",
         "noUnusedLocals": true,
-        "experimentalDecorators": true,
-        "typeRoots": ["node_modules/@types"]
+        "noImplicitAny": true,
+        "stripInternal": true,
+        "types": []
     },
     "compileOnSave": false,
     "include": [
-        "src/**/*.ts",
-        "typings/index.d.ts"
+        "src/**/*.ts"
     ]
 }
