--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "build": "npm run lint && npm run tsc",
     "tsc": "tsc",
     "lint": "tslint -c tslint.json src/**/*.ts",
-    "test": "mocha -r ts-node/register src/**/test.ts",
+    "test": "mocha -r ts-node/register tests/index.ts",
     "watch": "tsc -w"
   },
   "author": "Andrew Start <andrew.start@jibo.com>",
   "license": "MIT",
+  "files": [
+      "lib",
+      "readme.md",
+      "package.json"
+  ],
   "dependencies": {},
   "devDependencies": {
     "@types/mocha": "^5.0.0",
     "@types/node": "^8.0.0",
+    "@types/sinon": "^4.3.0",
     "mocha": "^5.0.5",
+    "sinon": "^4.5.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "typescript": "~2.8.1"
