--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "build": "npm run lint && npm run tsc",
     "tsc": "tsc",
     "lint": "tslint -c tslint.json src/**/*.ts",
-    "test": "mocha -r ts-node/register tests/index.ts",
+    "test": "nyc mocha -r ts-node/register tests/index.ts",
     "watch": "tsc -w"
   },
   "author": "Andrew Start <andrew.start@jibo.com>",
   "license": "MIT",
   "files": [
-      "lib",
-      "readme.md",
-      "package.json"
+    "lib",
+    "readme.md",
+    "package.json"
   ],
   "dependencies": {},
   "devDependencies": {
@@ -24,6 +24,7 @@
     "@types/node": "^8.0.0",
     "@types/sinon": "^4.3.0",
     "mocha": "^5.0.5",
+    "nyc": "^11.6.0",
     "sinon": "^4.5.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
