--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tsc": "tsc",
     "lint": "tslint -c tslint.json src/**/*.ts",
     "test": "nyc mocha -r ts-node/register tests/index.ts",
+    "report": "nyc report --reporter=html",
     "watch": "tsc -w"
   },
   "author": "Andrew Start <andrew.start@jibo.com>",
@@ -21,8 +22,8 @@
   "dependencies": {},
   "devDependencies": {
     "@types/mocha": "^5.0.0",
-    "@types/node": "^8.0.0",
-    "@types/sinon": "^4.3.0",
+    "@types/node": "^8.10.3",
+    "@types/sinon": "^4.3.1",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0",
     "sinon": "^4.5.0",
