--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "nyc mocha -r ts-node/register tests/index.ts",
     "report": "nyc report --reporter=html",
     "watch": "tsc -w",
-    "docs": "typedoc --target ES6 --mode file --includeDeclarations --out docs/ \"lib/index.d.ts\""
+    "docs": "typedoc --target ES6 --mode file --includeDeclarations --out docs/ \"lib/index.d.ts\"",
+    "docs-deploy": "npm run build && npm run docs && gh-pages -d docs"
   },
   "author": "Andrew Start <andrew.start@jibo.com>",
   "license": "MIT",
@@ -25,6 +26,7 @@
     "@types/mocha": "^5.0.0",
     "@types/node": "^8.10.3",
     "@types/sinon": "^4.3.1",
+    "gh-pages": "^1.1.0",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0",
     "sinon": "^4.5.0",
